# co2api

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
src/: api_calls.py  database.py
templates/: index.html
