[tool.poetry]
name = "co2api"
version = "0.1.0"
description = ""
authors = ["nprimo <primo.niccolo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
requests = "^2.28.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
mysql-connector-python = "^8.0.29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
